[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pip"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py38"

select = ["D"] # Enabling Only pydocstyle checks as of now (https://docs.astral.sh/ruff/rules/#pydocstyle-d)

ignore = [
    "D100", # Missing docstring in public module.
    "D101", # Missing docstring in public class.
    "D102", # Missing docstring in public method.
    "D103", # Missing docstring in public function.
    "D104", # Missing docstring in public package.
    "D105", # Missing docstring in magic method.
    "D106", # Missing docstring in public nested class.
    "D107", # Missing docstring in `__init__`.
    "D203", # 1 blank line required before class docstring.
    "D205", # 1 blank line required between summary line and description.
    "D212", # Multi-line docstring summary should start at the first line.
    "D213", # Multi-line docstring summary should start at the second line.
    "D209", # Multi-line docstring closing quotes should be on a separate line.
    "D400", # First line should end with a period.
    "D401", # First line of docstring should be in imperative mood.
    "D415", # First line should end with a period, question mark, or exclamation point.
    "D416", # Section name should end with a colon ("Attributes").
    "D417", # Missing argument description in the docstring for argument "X".
]

exclude = [
'ivy/functional/(frontends|backends)/(?!.*/func_wrapper\.py$).*(?!__init__\.py$)',
]
